test/lambda/negative/syntax/missing_bracket.ls
// @expect-error: E100
// @description: Missing closing bracket in array literal

let a = [1, 2, 3
let b = 4
